Added headers to cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,14 @@
 cmake_minimum_required (VERSION 2.8.11)
-project (TitatoLib)
+project(TitatoLib)
 include_directories(
     "${PROJECT_SOURCE_DIR}/src"
     "${PROJECT_SOURCE_DIR}/include"
 )
-add_library(Titato SHARED "src/TitatoGameImpl.cpp")
+SET(SOURCE
+    "src/TitatoGameImpl.cpp"
+)
+set(HEADERS
+    "include/TitatoGame.h"
+    "src/TitatoGameImpl.h"
+)
+add_library(Titato SHARED ${SOURCE} ${HEADERS})
