--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 2.8.11)
-project(TitatoLib)
+project(TitatoGameCore)
 include_directories(
     "${PROJECT_SOURCE_DIR}/src"
     "${PROJECT_SOURCE_DIR}/include"
@@ -11,4 +11,4 @@ set(HEADERS
     "include/TitatoGame.h"
     "src/TitatoGameImpl.h"
 )
-add_library(Titato SHARED ${SOURCE} ${HEADERS})
+add_library(TitatoGameCore SHARED ${SOURCE} ${HEADERS})
